# ember

./: .gitignore  README.md  pyproject.toml
FPGA/: Fire_Detection_Accelerator.xpr  vivado.jou  vivado_27616.backup.jou  vivado_44408.backup.jou  vivado_45748.backup.jou  vivado_9948.backup.jou  vivado_pid44408.str  vivado_pid45232.str
FPGA/Fire_Detection_Accelerator.cache/sim/: ssm.db
FPGA/Fire_Detection_Accelerator.cache/wt/: synthesis.wdf  webtalk_pa.xml
FPGA/Fire_Detection_Accelerator.hw/hw_1/: hw.xml
FPGA/Fire_Detection_Accelerator.ip_user_files/mem_init_files/: pjeevy1.mem
FPGA/Fire_Detection_Accelerator.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml  vrs_config_3.xml
FPGA/Fire_Detection_Accelerator.runs/impl_1/: .init_design.begin.rst  .vivado.begin.rst  .write_bitstream.begin.rst  clockInfo.txt  gen_run.xml  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  runme.sh  top.bit  top.tcl  top.vdi  top_29468.backup.vdi  vivado.jou  (+26 more)
FPGA/img_srcs/: image.mem  png_to_mem.py  verify_fpga.py  view_image.py
scripts/: _bootstrap.py  ab_spray.py  build_demo_scene.py  build_scenes.py  record_demo.py  record_synced.py  render_robot_cam.py  rt_probe.py  run_gmt.py  run_walker.py  stress_demo_scene.py
src/ember/: __init__.py  arms.py  config.py  effects.py  executor.py  fire_controller.py  gmt.py  locomotion.py  mission.py  nav.py  scenegen.py  scenes.py  sim.py  spec.py  streaming.py  viewer.py
tests/: conftest.py  test_executor.py  test_mission.py  test_nav.py  test_scenegen.py  test_spray_rl.py
train_5090/: README.md  export_policy.py  setup_5090.sh  train_g1.py  verify_jax_gpu.py
wifi_data_server/UART-USB/: fire_server.py  read_fire.py
(+83 files in other folders)
